; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_vdbesort.c_vdbePmaWriteVarint.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_vdbesort.c_vdbePmaWriteVarint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @vdbePmaWriteVarint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vdbePmaWriteVarint(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca [10 x i32], align 16
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = getelementptr inbounds [10 x i32], [10 x i32]* %6, i64 0, i64 0
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @sqlite3PutVarint(i32* %7, i32 %8)
  store i32 %9, i32* %5, align 4
  %10 = load i32*, i32** %3, align 8
  %11 = getelementptr inbounds [10 x i32], [10 x i32]* %6, i64 0, i64 0
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @vdbePmaWriteBlob(i32* %10, i32* %11, i32 %12)
  ret void
}

declare dso_local i32 @sqlite3PutVarint(i32*, i32) #1

declare dso_local i32 @vdbePmaWriteBlob(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
